first pass at Qlik engine APIs

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
    <modules>
       <module>qlikglue-core</module>
       <module>qlikglue-publishers</module>
+      <module>qlik-api</module>
    </modules>
 
    <properties>
