--- a/qlikglue-publishers/qlik/pom.xml
+++ b/qlikglue-publishers/qlik/pom.xml
@@ -14,26 +14,11 @@
    <artifactId>qlikglue-qlik</artifactId>
 
    <dependencies>
-      <dependency>
-         <groupId>javax.websocket</groupId>
-         <artifactId>javax.websocket-client-api</artifactId>
-         <version>1.1</version>
-      </dependency>
-      <dependency>
-          <groupId>org.glassfish.tyrus.bundles</groupId>
-          <artifactId>tyrus-standalone-client-jdk</artifactId>
-          <version>1.15</version>
-      </dependency>
-      <dependency>
-         <groupId>javax.json</groupId>
-         <artifactId>javax.json-api</artifactId>
-         <version>1.1.4</version>
-      </dependency>
-      <dependency>
-         <groupId>org.glassfish</groupId>
-         <artifactId>javax.json</artifactId>
-         <version>1.1.4</version>
-      </dependency>
+       <dependency>
+       <groupId>qlikglue</groupId>
+       <artifactId>qlik-api</artifactId>
+       <version>1.0.0.0</version>
+       </dependency>
    </dependencies>
 
   <build>
