--- a/qlik-api/pom.xml
+++ b/qlik-api/pom.xml
@@ -32,6 +32,16 @@
         <version>1.7.26</version>
      </dependency>
      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
+     </dependency>
+     <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
+     </dependency>
+     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
         <version>2.9.8</version>
@@ -45,16 +55,6 @@
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
         <version>2.9.8</version>
-     </dependency>
-     <dependency>
-        <groupId>net.sourceforge.argparse4j</groupId>
-        <artifactId>argparse4j</artifactId>
-        <version>0.8.1</version>
-     </dependency>
-     <dependency>
-        <groupId>qlikglue</groupId>
-        <artifactId>qlikglue-core</artifactId>
-        <version>1.0.0.0</version>
      </dependency>
    </dependencies>
 
