--- a/qlikglue-core/pom.xml
+++ b/qlikglue-core/pom.xml
@@ -28,9 +28,9 @@
         <version>1.7.26</version>
      </dependency>
      <dependency>
-       <groupId>org.apache.hadoop</groupId>
-       <artifactId>hadoop-common</artifactId>
-       <version>2.7.2</version>
+       <groupId>log4j</groupId>
+       <artifactId>log4j</artifactId>
+       <version>1.2.17</version>
      </dependency>
      <dependency>
        <groupId>org.apache.avro</groupId>
@@ -41,6 +41,11 @@
        <groupId>org.apache.avro</groupId>
        <artifactId>avro-mapred</artifactId>
        <version>1.8.1</version>
+     </dependency>
+     <dependency>
+       <groupId>commons-io</groupId>
+       <artifactId>commons-io</artifactId>
+       <version>2.6</version>
      </dependency>
    </dependencies>
 
