fixes related to qlik demo

--- a/qlikglue-core/src/main/resources/qlikglueDefault.properties
+++ b/qlikglue-core/src/main/resources/qlikglueDefault.properties
@@ -1,4 +1,6 @@
 
+qlikload.app-name = baseball stats
+
 qlikglue.encoder.threads = 2
 qlikglue.encoder.class = qlikglue.encoder.NullEncoder
 #qlikglue.encoder.class = qlikglue.encoder.JsonEncoder
@@ -30,8 +32,8 @@ qlikglue.event.avro-schema-path = ./gghadoop/avro
 #
 #qlikglue.publisher.class = qlikglue.publisher.console.ConsolePublisher
 qlikglue.publisher.class = qlikglue.publisher.qlik.QlikPublisher
-qlikglue.publisher.threads = 2
-qlikglue.publisher.hash = rowkey
+qlikglue.publisher.threads = 1
+qlikglue.publisher.hash = table
 
 qlikglue.kafka.topic = mytopic
 qlikglue.kafka.batchSize = 100
